# gds-projekt

./: .gitignore  README.md  advanced_model.py  combine_liar_split.py  convert_to_lesser.py  count_unique.py  f1_score_model.py  fake_articles_sample.csv  fake_reliable_word_count.py  label_group.py  liar_model.py  logistic_regressor.py  main.py  observation2_pn_language.py  observation3.py  p2t3.py  preprocess.py  reliable_articles_sample.csv  requirements.txt  setup.bat  test_model.py  top10k.py  tsv_to_csv.py
code_pre_processor/: __init__.py
data/: articles_data.csv  news_sample_processed.csv  news_sample_processed_test.csv  news_sample_processed_train.csv  news_sample_processed_val.csv
deprecated_code_pre_processor/: __init__.py
gds-rust/: Cargo.toml
gds-rust/src/: main - Copy.txt  main.rs
logistic-regressor/: __init__.py
output/: readme.txt
rust-preprocess/: Cargo.toml
rust-preprocess/src/: main.rs
utils/: combine_datasets.py  convert_to_lesser.py  count_unique.py  f1_score_model.py  label_group.py  label_reliable.py  observation3.py  pandas_csv_reader.py  preprocess.py  reliable_count.py  top10k.py  tsv_to_csv.py
