[package]
name = "rust-preprocess"
version = "1.1.0"
edition = "2024"
authors = ["Gruppe 23"]

[dependencies]
rayon = "1.10.0"
indicatif = "0.17.11"
regex = "1.11.1"
csv = "1.3.1"
once_cell = "1.21.1"
rust-stemmers = "1.2.0"
fxhash="0.2.1"
clap = { version = "4.5.32", features = ["derive"] }
rand = "0.9.0"